[package]
name = "subseq_websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8", optional = true, features = ["ws"] }
bytes = { version = "1.10.1", optional = true }
chrono = { version = "0.4.43", optional = true, features = ["serde"] }
futures-util = { version = "0.3.31", optional = true }
once_cell = { version = "1.21.3", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", optional = true, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "json"] }
subseq_auth = { path = "../subseq_auth", optional = true }
tokio = { version = "1.49.0", features = ["sync", "rt"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[features]
default = ["api"]
api = ["dep:axum", "dep:bytes", "dep:futures-util", "dep:subseq_auth", "sqlx"]
sqlx = ["dep:sqlx", "dep:once_cell", "dep:chrono"]

[dev-dependencies]
axum-server = "0.7.2"
serde_urlencoded = "0.7.1"
tracing-subscriber = "0.3.20"
